--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL="http://localhost"
+NEXT_PUBLIC_BACKEND_URL="http://localhost:4200"
+NEXT_PUBLIC_FRONTEND_URL="http://localhost:3000"
