--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,7 +35,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.11",
     "lucide-react": "^0.341.0",
-    "next": "14.1.0",
+    "next": "^14.2.2",
     "next-theme": "^0.1.5",
     "react": "^18",
     "react-dom": "^18",
