--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "lucide-react": "^0.341.0",
     "next": "^14.2.2",
     "next-theme": "^0.1.5",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
