--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_BACKEND_URL="http://localhost:4200"
 NEXT_PUBLIC_FRONTEND_URL="http://localhost:3000"
+
+NEXT_PUBLIC_STATIC_FILES_URL_SEGMENT="/static-files"
+NEXT_PUBLIC_PROJECT_ATTACHMENTS_URL_SEGMENT="/project-attachments"
